Fix scrollbar issue

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 }
 html{
     scroll-behavior: smooth;
+    overflow-y: scroll;
 }
 body{
     min-height: 100vh;
